--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@cloudinary/react": "^1.13.0",
-    "@cloudinary/url-gen": "^1.21.0"
+    "@cloudinary/url-gen": "^1.21.0",
+    "luxon": "^3.5.0"
   }
 }
